src/objects/InternalKB__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Tab</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>The template used for WGU internal KB articles.</description>
    <fields>
        <fullName>Attachment2__c</fullName>
        <label>Attachment 2</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment3__c</fullName>
        <label>Attachment 3</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment4__c</fullName>
        <label>Attachment 4</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <description>The content, details or body of the article.</description>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ContentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who owns and manages the content of the article</description>
        <inlineHelpText>Owner of the content, if other than the Creator</inlineHelpText>
        <label>Content Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Internal_KBs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <picklist>
            <picklistValues>
                <fullName>Add/Remove Assessments in TaskStream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment Center Questions/Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment Grading Complaint/Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment Grading Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment Scheduling Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capstone Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Care Questions/Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolling/Referring for Assessments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation Feedback Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Questions/Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excessive Attempt Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OLP - Issues/Complaints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Originality Questions/Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Exam Vendor Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preassessment Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proctor Site Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Score Posting Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scoring Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task Directions or Link Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TaskStream Navigation Inquiries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third-party Assessments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admissions Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campus Store Questions/Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment Counselor - Complaint Towards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Marketing Materials Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLA - Provisional Letter of Acceptance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program book requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective Student Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Readiness Assessment Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refer-A-Friend Program Inquiry</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Internal KB</label>
    <pluralLabel>Internal KBs</pluralLabel>
</CustomObject>